Template error, fixed.

--- a/templates/application.conf.j2
+++ b/templates/application.conf.j2
@@ -1,4 +1,4 @@
 <Location {{ item.location }}>
-  ProxyPass {{ item.backend_url }} }}
-  ProxyPassReverse {{ item.backend_url }} }}
+  ProxyPass {{ item.backend_url }}
+  ProxyPassReverse {{ item.backend_url }}
 </Location>
