--- a/templates/application.conf.j2
+++ b/templates/application.conf.j2
@@ -1,3 +1,4 @@
+{{ ansible_managed | comment }}
 <Location {{ item.location }}>
   ProxyPass {{ item.backend_url }}
   ProxyPassReverse {{ item.backend_url }}
