--- a/templates/ssl.conf.j2
+++ b/templates/ssl.conf.j2
@@ -5,6 +5,6 @@ Listen {{ httpd_ssl_port }}
 <VirtualHost *:{{ httpd_ssl_port }}>
     ServerName {{ httpd_ssl_servername }}
     SSLEngine on
-    SSLCertificateFile "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.crt"
-    SSLCertificateKeyFile "{{ httpd_config_directory[ansible_distribution] }}/ssl/{{ httpd_ssl_servername }}.key"
+    SSLCertificateFile "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.crt"
+    SSLCertificateKeyFile "{{ httpd_configuration[ansible_distribution]['config_directory'] }}/ssl/{{ httpd_ssl_servername }}.key"
 </VirtualHost>
