--- a/templates/ssl.conf.j2
+++ b/templates/ssl.conf.j2
@@ -1,5 +1,5 @@
 {{ ansible_managed | comment }}
-LoadModule ssl_module modules/mod_ssl.so
+LoadModule ssl_module {{ httpd_configuration[ansible_distribution]['mod_ssl'] }}
 
 Listen {{ httpd_ssl_port }}
 <VirtualHost *:{{ httpd_ssl_port }}>
