--- a/templates/default_vhost.conf.j2
+++ b/templates/default_vhost.conf.j2
@@ -1,6 +1,6 @@
 NameVirtualHost *:{{ httpd_port }}
 <VirtualHost *:{{ httpd_port }}>
    ServerName {{ httpd_servername }}
-   DocumentRoot "{{ httpd_configuration[ansible_distribution]['data_directory'] }}"
+   DocumentRoot "{{ httpd_data_directory }}"
    Redirect permanent / https://{{ httpd_servername }}
 </VirtualHost>
