Add buildtools (alpine), remove scl, use better variable names.

--- a/templates/default_vhost.conf.j2
+++ b/templates/default_vhost.conf.j2
@@ -2,6 +2,6 @@
 NameVirtualHost *:{{ httpd_port }}
 <VirtualHost *:{{ httpd_port }}>
    ServerName {{ httpd_servername }}
-   DocumentRoot "{{ httpd_data_directory[ansible_distribution] | default(httpd_data_directory['default']) }}"
+   DocumentRoot "{{ httpd_data_directory }}"
    Redirect permanent / https://{{ httpd_servername }}
 </VirtualHost>
