Add a proxy feature and clean up playbooks.

--- a/templates/location.conf.j2
+++ b/templates/location.conf.j2
@@ -2,4 +2,7 @@
 <Location {{ item.location }}>
   ProxyPass {{ item.backend_url }}
   ProxyPassReverse {{ item.backend_url }}
+{% if item.remote is defined %}
+  ProxyRemote * {{ item.remote }}
+{% endif %}
 </Location>
