--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -2,7 +2,7 @@
 <VirtualHost *:{{ httpd_port }}>
    ServerName {{ item.servername }}
 {% if item.documentroot is defined %}
-   DocumentRoot "{{ item.documtentroot }}"
+   DocumentRoot "{{ item.documentroot }}"
 {% endif %}
 {% if item.backend_url is defined %}
    ProxyPreserveHost On
