--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -9,4 +9,7 @@
    ProxyPass / {{ item.backend_url }}
    ProxyPassReverse / {{ item.backend_url }}
 {% endif %}
+{% if item.remote is defined %}
+  ProxyRemote * {{ item.remote }}
+{% endif %}
 </VirtualHost>
