Make the path to the modules depend on the distribution.

--- a/templates/ssl.conf.j2
+++ b/templates/ssl.conf.j2
@@ -1,5 +1,6 @@
 {{ ansible_managed | comment }}
-LoadModule ssl_module {{ httpd_mod_ssl }}
+
+LoadModule ssl_module {{ httpd_modules_path}}/mod_ssl.so
 
 Listen {{ httpd_ssl_port }}
 <VirtualHost *:{{ httpd_ssl_port }}>
