--- a/templates/default_vhost.conf.j2
+++ b/templates/default_vhost.conf.j2
@@ -1,6 +1,6 @@
 {{ ansible_managed | comment }}
 
-LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module {{ httpd_modules_path }}/mod_rewrite.so
 
 <VirtualHost *:{{ httpd_port }}>
    ServerName {{ httpd_servername }}
