--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -1,7 +1,7 @@
 {{ ansible_managed | comment }}
 
 {% if item.backend_url is defined %}
-LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_http_module {{ httpd_modules_path }}/mod_proxy_http.so
 {% endif %}
 
 <VirtualHost *:{{ httpd_port }}>
