--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -1,6 +1,7 @@
 {{ ansible_managed | comment }}
 
 {% if item.backend_url is defined %}
+LoadModule proxy_module {{ httpd_modules_path }}/mod_proxy.so
 LoadModule proxy_http_module {{ httpd_modules_path }}/mod_proxy_http.so
 {% endif %}
 
