--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -1,8 +1,13 @@
 {{ ansible_managed | comment }}
 
 {% if item.backend_url is defined %}
-LoadModule proxy_module {{ httpd_modules_path }}/mod_proxy.so
-LoadModule proxy_http_module {{ httpd_modules_path }}/mod_proxy_http.so
+<IfModule !proxy_module>
+   LoadModule proxy_module {{ httpd_modules_path }}/mod_proxy.so
+</IfModule>
+
+<IfModule !proxy_http_module>
+   LoadModule proxy_http_module {{ httpd_modules_path }}/mod_proxy_http.so
+</IfModule>
 {% endif %}
 
 <VirtualHost *:{{ httpd_port }}>
