--- a/templates/ssl.conf.j2
+++ b/templates/ssl.conf.j2
@@ -6,6 +6,6 @@ Listen {{ httpd_ssl_port }}
 <VirtualHost *:{{ httpd_ssl_port }}>
     ServerName {{ httpd_ssl_servername }}
     SSLEngine on
-    SSLCertificateFile "{{ httpd_openssl_crt_directory }}/apache-httpd.crt"
-    SSLCertificateKeyFile "{{ httpd_openssl_key_directory }}/apache-httpd.key"
+    SSLCertificateFile "{{ httpd_openssl_crt_directory }}/{{ httpd_openssl_crt }}"
+    SSLCertificateKeyFile "{{ httpd_openssl_key_directory }}/{{ httpd_openssl_key }}"
 </VirtualHost>
