--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -13,7 +13,7 @@
 <VirtualHost *:{{ httpd_port }}>
    ServerName {{ item.servername }}
 {% if item.options is defined %}
-   Options {{ item.options }}
+   Options {{ item.options|join(' ') }}
 {% endif %}
 {% if item.documentroot is defined %}
    DocumentRoot "{{ item.documentroot }}"
