--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -12,6 +12,11 @@
 
 <VirtualHost *:{{ httpd_port }}>
    ServerName {{ item.servername }}
+
+   {% if item.serveralias is defined %}
+   ServerAlias {{ item.serveralias | join(' ') }}
+   {% endif %}
+
 {% if item.options is defined %}
    Options {{ item.options|join(' ') }}
 {% endif %}
