--- a/templates/httpd.conf-Archlinux.j2
+++ b/templates/httpd.conf-Archlinux.j2
@@ -529,6 +529,7 @@ Include conf/extra/httpd-default.conf
 Include conf/extra/proxy-html.conf
 </IfModule>
 
+{% if https_ssl_enable %}
 # Secure (SSL/TLS) connections
 #Include conf/extra/httpd-ssl.conf
 #
@@ -540,5 +541,6 @@ Include conf/extra/proxy-html.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+{% endif %}
 
 TraceEnable Off
