--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -10,13 +10,24 @@
 </IfModule>
 {% endif %}
 
-<VirtualHost *:{{ httpd_port }}>
+{% if item.redirect_to_https is defined and item.redirect_to_https %}
+<IfModule !rewrite_module>
+   LoadModule rewrite_module {{ httpd_modules_path }}/mod_rewrite.so
+</IfModule>
+{% endif %}
+
+<VirtualHost *:{{ item.port | default(httpd_port) }}>
    ServerName {{ item.servername }}
 
 {% if item.serveralias is defined %}
    ServerAlias {{ item.serveralias | join(' ') }}
 {% endif %}
 
+{% if item.redirect_to_https is defined and item.redirect_to_https %}
+   RewriteEngine On
+   RewriteCond %{HTTPS} off
+   RewriteRule ^(.*)$ https://%{HTTP_HOST}:{{ item.ssl_port | default(httpd_ssl_port) }}%{REQUEST_URI} [L,R=301]
+{% else %}
 {% if item.options is defined %}
    Options {{ item.options|join(' ') }}
 {% endif %}
@@ -47,5 +58,6 @@ ProxyPass / {{ item.backend_url }}
 {% for env in item.setenv %}
    SetEnv {{ env.name }} {{ env.value | default("") }}
 {% endfor %}
+{% endif %}
 {% endif %}
 </VirtualHost>
