Allow locations in vhosts.

--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -60,4 +60,10 @@ ProxyPass / {{ item.backend_url }}
 {% endfor %}
 {% endif %}
 {% endif %}
+{% for location in item.locations %}
+   <Location {{ item.location }}>
+     ProxyPass {{ item.backend_url }}
+     ProxyPassReverse {{ item.backend_url }}
+   </Location>
+{% endfor %}
 </VirtualHost>
