--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -75,4 +75,10 @@ ProxyPass / {{ item.backend_url }}
    </Location>
 {% endfor %}
 {% endif %}
+{% if item.error_log is defined %}
+     ErrorLog {{ item.error_log }}
+{% endif %}
+{% if item.custom_log is defined %}
+     CustomLog {{ item.custom_log }} combined
+{% endif %}
 </VirtualHost>
