--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -75,6 +75,22 @@ ProxyPass / {{ item.backend_url }}
    </Location>
 {% endfor %}
 {% endif %}
+
+   <Directory "{{ item.directory }}">
+   {% if item.options is defined %}
+      Options {% for option in item.options %}{{ option }}{% if not loop.last %} {% endif %}{% endfor %}
+
+   {% endif %}
+   {% if item.allow_override is defined %}
+      AllowOverride {{ item.allow_override }}
+
+   {% endif %}
+   {% if item.require is defined %}
+      Require {{ item.require }}
+
+   {% endif %}
+   </Directory>
+
 {% if item.error_log is defined %}
    ErrorLog {{ item.error_log }}
 {% endif %}
