--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -75,22 +75,15 @@ ProxyPass / {{ item.backend_url }}
    </Location>
 {% endfor %}
 {% endif %}
-
-   <Directory "{{ item.directory }}">
-   {% if item.options is defined %}
-      Options {% for option in item.options %}{{ option }}{% if not loop.last %} {% endif %}{% endfor %}
-
-   {% endif %}
-   {% if item.allow_override is defined %}
-      AllowOverride {{ item.allow_override }}
-
-   {% endif %}
-   {% if item.require is defined %}
-      Require {{ item.require }}
-
-   {% endif %}
+{% if item.directories is defined %}
+{% for directory in item.directories %}
+   <Directory "{{ directory.path }}">
+     Options {% for option in directory.options %}{{ option }}{% if not loop.last %} {% endif %}{% endfor %}
+     AllowOverride {{ directory.allow_override }}
+     Require {{ directory.require }}
    </Directory>
-
+{% endfor %}
+{% endif %}
 {% if item.error_log is defined %}
    ErrorLog {{ item.error_log }}
 {% endif %}
